# STEP-IT-Homework

./: .gitignore  CMakeLists.txt  Calculator.cpp  DZC_C++25.04.cpp  DZC_C++C12.02.cpp  DZC_C++_01.03.cpp  DZC_C++_02.05.cpp  DZC_C++_03.03.cpp  DZC_C++_04.05.cpp  DZC_C++_05.04.cpp  DZC_C++_06.03(L).cpp  DZC_C++_06.03.cpp  DZC_C++_07.05.cpp  DZC_C++_09.02.cpp  DZC_C++_09.03.cpp  DZC_C++_09.04(L).cpp  DZC_C++_10.02.cpp  DZC_C++_12.03.cpp  DZC_C++_13.02.cpp  DZC_C++_14.03(2).cpp  DZC_C++_14.03.cpp  DZC_C++_17.02.cpp  DZC_C++_19.03.cpp  DZC_C++_20.02.cpp  DZC_C++_21.02(2).cpp  DZC_C++_21.02.cpp  DZC_C++_21.03.cpp  DZC_C++_23.03.cpp  DZC_C++_23.04(2).cpp  DZC_C++_23.04(2)kassa.cpp  DZC_C++_23.04.cpp  DZC_C++_25.04(2).cpp  DZC_C++_26.02.cpp  DZC_C++_27.04(2).cpp  DZC_C++_27.04.cpp  DZC_C++_28.02.cpp  DZ_C++_02.03.cpp  DZ_C++_02.04.cpp  DZ_C++_09.04.cpp  DZ_C++_23.02.cpp  (+2 more)
DZ.31.08/: DZ.31.08.sln
DZC#_29.08/: DZC#_29.08.sln
DZC#_29.08(2)/: DZC#_29.08.sln
DZC_C++_OOP_28.05/: DZC_C++_OOP_28.05.cpp  DZC_C++_OOP_28.05cpp.cpp
DZ_01.06/: CMakeLists.txt  CPU.cpp  CPU.h  DZ_01.06.cpp  DZ_01_06.h  MotherBoard.cpp  MotherBoard.h  RAM.cpp  RAM.h  VideoCard.cpp  VideoCard.h
DZ_02.07/: CMakeLists.txt  main.cpp
DZ_03.12(Computers)/: DZ_03.12(Computers).sln
DZ_03_12/: DZ_03_12.sln
DZ_05.06/: CMakeLists.txt  CPU1.cpp  CPU1.h  Component.cpp  Component.h  DZ_04.06.cpp  DZ_04.06.h  MotherBoard1.cpp  MotherBoard1.h  RAM1.cpp  RAM1.h  VideoCard1.cpp  VideoCard1.h
DZ_05_12/: DZ_05_12.sln
DZ_06.06/: CMakeLists.txt  DZ_06.06.cpp
DZ_07_09/: DZ_07_09.sln
DZ_08.06/: CMakeLists.txt  (+1 more)
(+470 files in other folders)
