cmake_minimum_required(VERSION 3.24)
project(STEP_IT_Homework)

set(CMAKE_CXX_STANDARD 20)

add_executable(STEP_IT_Homework "DZC_C++_OOP_28.05(student)2.cpp" birthDate.h "DZC_C++_OOP_28.05(student).h" "DZC_C++_OOP_28.05(studentCP).cpp" university.cpp university.h birthDate.cpp fullname.cpp fullname.h teleCityCountry.h teleCityCountryCp.cpp)
